Prepare repository for submission
The project overview still describes the earlier task manager and the test sources do not pass the configured style checks.

Document the marketplace workflow, align test code with the project coding standard, and refresh the release JAR so the submitted artifacts match the verified application.